--- a/styles/partials/_mediaQueries.scss
+++ b/styles/partials/_mediaQueries.scss
@@ -26,6 +26,15 @@
     .featureDescription, .featured h5 {
         text-align: center;
     }
+    .projectDisplay {
+        padding-bottom: 1000px;
+    }
+    .leftArrow {
+        top: 91%;
+    }
+    .rightArrow {
+        top: 91%;
+    }
     .projectRow {
         flex-direction: column;
         align-items: center;
@@ -166,6 +175,18 @@
     .projectText a p {
         width: 85%;
     }
+    .projectDisplay {
+        padding-bottom: 1100px;
+    }
+     .leftArrow {
+        top: 94%;
+    }
+    .rightArrow {
+        top: 94%;
+    }
+    .carouselNav {
+        bottom: 2%;
+    }
 }   
 @media (max-width: 500px) {
     .portfolio {
@@ -194,6 +215,7 @@
     .navFlex {
         padding-top: 70px;
     }
+    
 }
 @media (max-width: 400px) {
     .techStackName {
